infra/kubernetes/overlays/prod/network-policy-strict.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: retailpulse-prod-egress-allow-required-ports
  namespace: retailpulse
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - cloud-api
          - edge-api
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5671
